--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@ Add nav bar to the footer ( improve footer)
 	
 	<div class="w3-display-middle w3-center" style="margin-top: 8%;">
 		
-	  <h1 class="w3-text-white" style="font-size:3vw;"><span class="w3-padding w3-black w3-opacity-min"><b>Commemorative</b></span>  <span class="w3-padding w3-text-light-grey">Goals</span> </h1>
-	  <h3 style="font-size:1.5vw;"> <b> <i>The ultimate edition for the ultimate fan</i></b> </h3>
+	  <h1 class="w3-text-white" ><span class="w3-padding w3-black w3-opacity-min"><b>Commemorative</b></span>  <span class="w3-padding w3-text-light-grey">Goals</span> </h1>
+	  <h3 class = "w3-xlarge"> <span class= "w3-white w3-opacity"><b>The ultimate edition for the ultimate fan</b> </span> </h3>
 	</div>
 </header>
 
