--- a/photo_gallery.html
+++ b/photo_gallery.html
@@ -62,6 +62,7 @@
 <div class="w3-center  w3-padding-16" style="margin-top: 10%;">
 <h1> <u>Photo Gallery</u> </h1>
 <h3 style="font-size:1.5vw;"> <b> <i>The ultimate edition for the ultimate fan</i></b> </h3>
+<h5> All Photo's of the prints by Julia Ball</h5>
 </div>
 
 
@@ -83,7 +84,7 @@
     </div>
    
 </div>
-<div class="w3-center"><h1>The perfect gift for that special person in your life <br> "Birthday" or "Fathers Day" <br> "Christmas or "Retirement Gift"</h1></div>
+<div class="w3-center"><h1>The perfect gift for that special person in your life. <br> "Birthday" or "Fathers Day" <br> "Christmas or "Retirement Gift"</h1></div>
 
 <hr></hr>
 <!-- Second Photo Grid-->
@@ -124,7 +125,7 @@
 <!-- fourth Photo Grid-->
 <div class="w3-row-padding w3-padding-16 w3-center" id="Row_2">
   <div class="w3-half">
-    <img src=".\pics\rocket_group.jpeg" alt="Rocket sgining" style="width:100%">
+    <img src=".\pics\rocket_group_crop.jpeg" alt="Rocket sgining" style="width:100%">
     <h3>Maurice Richard signing</h3>
     <p>Maurice Richard signing the lithographs<br> by R. Carter</p>
   </div>
@@ -193,6 +194,22 @@
     This guarantees each limited edition lithograph will bring great pleasure to the collector and increased value for the investor.
   </p>
   
+ <!-- Fivth Photo Grid-->
+ <div class="w3-row-padding w3-padding-16 w3-center" id="Row_3">
+  <div class="w3-half">
+    <img src=".\pics\rocket_words.jpg" alt="Rocket sgining" style="width:100%">
+    <h3>Rocket Richard middle script</h3>
+   
+  </div>
+
+  <div class="w3-half">
+    <img src=".\pics\jean_words.jpg" alt="Jean sgining" style="width:100%">
+    <h3>Jean Beliveau middle script</h3>
+   
+  </div>
+
+</div>
+
 </div>
 
 
