--- a/shipping.html
+++ b/shipping.html
@@ -66,7 +66,7 @@ Add nav bar to the footer ( improve footer)
 </div>
 
 <!-- Page content -->
-<div class="w3-content w3-padding" style="max-width:1564px">
+<div class="w3-content w3-padding" style="max-width:1564px; margin-top:8%;">
 
 <!-- INformation Section -->
 <div class="w3-row-padding w3-padding-64 w3-container">
@@ -75,10 +75,10 @@ Add nav bar to the footer ( improve footer)
 		<h1>Shipping Infomation</h1>
 		<h5 class="w3-padding-32">
 			<ul>
-			<li>All shipments will have a tracking number</li>	
+			<li>All shipments will have a tracking number.</li>	
 			<li>We will only ship in a reinforced corrugated tube. We will NOT ship flat.</li>
 			<li>Shipping flat only increases the chance of damage to the print and substantiality increases the cost of shipping. On the outside of the tube are handling and framing instructions.</li>
-			<li>Candian Shipping & Insurance Costs: $32 USD Anywhere in Canada</li>
+			<li>Canadian Shipping & Insurance Costs: $32 USD Anywhere in Canada</li>
 			<li>American Shipping & Insurance Costs: $55 USD Anywhere in USA </li>
 			<li>International: Please use the Contact Seller icon on the ebay page to receive an accurate shipping quote. 
 				<a href=".\contact_me.html">
@@ -129,7 +129,7 @@ Add nav bar to the footer ( improve footer)
 
 <div class="w3-row-padding w3-padding-64 w3-container">
 	<div class="w3-content">
-	  <div class="w3-twothird">
+	  <div class="w3-half">
 		<h1 class="w3-border-bottom w3-border-light-grey">Framing Instructions</h1>
 		<hp class="w3-padding-32">
 			<ol>
@@ -143,6 +143,23 @@ Add nav bar to the footer ( improve footer)
 			  </ol>
 		</hp>
 	  </div>
+	   <!-- .w3-col.m5 is for spacing-->
+	<div class="w3-half">
+	   <h1 class="w3-border-bottom w3-border-light-grey">Handling Instructions</h1>
+	   <hp class=" w3-padding-32">
+				<ul>
+					<li>Do not accept shipment if external damage is evident (ie) tube has been cut, crushed or opened.</li>
+					<li>If print is to be framed deliver unopened tube directly to framer.</li>
+					<li>To open: Most print damage is due to careless handling.</li>
+					<li>Carefully open ends of tube.</li>
+					<li>Wash hands just before print removal.</li>
+					<li>Carefully grasp inner packaging paper. Gently pull upward with a rotating motion.</li>
+					<li>Allow print to relax for a few hours before unrolling.</li>
+					<li>Place relaxed print between two clean sheets of paper (supplied) and top with weights to flatten completely. (Thanks)</li>
+
+				</ul>	  
+		</div>
+	</div>
  
 	</div>
   </div>
