--- a/updates.html
+++ b/updates.html
@@ -71,12 +71,12 @@ Add nav bar to the footer ( improve footer)
 
 	<!-- INformation Section -->
 
-<div class="w3-row-padding w3-padding-32 w3-container">
+<div class="w3-row-padding w3-padding-32 w3-container" style="margin-top: 10%;">
 	<div class="w3-content">
 	  <div class="w3-twothird">
 		<h1 class="w3-border-bottom w3-border-light-grey">Updates</h1>
 		<h5 class="w3-padding-32">
-			In this inaugral edition of lithographs, we are offering 80 prints signed and PSA/DNA authenticated by PSA. 
+			In this inaugral group of PSA/DNA authenticated lithographs, we are offering 80, signed and numbered prints.
 		</h5>
 	  </div>
   <!-- .w3-col.m5 is for spacing-->
@@ -96,7 +96,7 @@ Add nav bar to the footer ( improve footer)
 		  <div class="w3-twothird">
 			<h1 class="w3-border-bottom w3-border-white">HAND SIGNED LITHOGRAPHS</h1>
 			<h5 class="w3-padding-32">
-				Each year we will be adding more prints avialvle with PSA/DNA autentication
+				Each year we will be adding more prints available with PSA/DNA autentication.
 			</h5>
 		  </div>
 	  <!-- .w3-col.m5 is for spacing-->
@@ -115,19 +115,31 @@ Add nav bar to the footer ( improve footer)
 	  <div class="w3-twothird">
 		<h1 class="w3-border-bottom w3-border-light-grey">Updates</h1>
 		<h5 class="w3-padding-32">
-			Look for an outstanding imaige of the bluenose I that will be ready for sale in the summer of 2021 
+			Look for an outstanding imaige of the bluenose I that will be ready for sale in the summer of 2021. 
 		</h5>
 	  </div>
   <!-- .w3-col.m5 is for spacing-->
 		 <div class=".w3-col.m5 w3-center w3-padding-32" >
-		<img src=".\pics\jean_beliveau.jpg" style="width:250px;height:312px;">
+		<img src=".\pics\bluenose.jpg" style="width:350px;height:257px;">
 	  </div>
 	</div>
   </div>
 
 </div>
+<hr>
+<div class="w3-row-padding w3-padding-32 w3-container">
+	<div class="w3-content">
+		<h1 class="w3-border-bottom w3-border-light-grey">Framing Tip</h1>
+		<h5 class="w3-padding-32">
+			<ul>
+				<li>When deciding on Framing, please remember that the inside Mat (the mat touching the lithograph) should be ACID FREE</li>
+			
+			</ul>
+		</h5>
+	  </div>
 
-<p>Thank you for visting</p>
+</div>
+
 
   
 
