--- a/jean_beliveau.html
+++ b/jean_beliveau.html
@@ -114,7 +114,8 @@
         </div> <!-- Ref CSS for loaction and style-->
 
         <div onclick="showDescription('blurb7')" id="num_cust8">click
-          <div id="blurb7">Actual size 20 x 26 inches</div>
+          <div id="blurb7">Actual size 26 x 20 inches <br>
+            Image size is 17.75 x 23 Inches </div>
         </div> <!-- Ref CSS for loaction and style-->
 
           <area shape="rect" coords="0,0,1580,1460" id=""/> <!-- total picture area hover-->
