--- a/price.html
+++ b/price.html
@@ -69,7 +69,7 @@ Add nav bar to the footer ( improve footer)
 <div class="w3-content w3-padding" style="max-width:1564px">
 
 <!-- INformation Section -->
-<div class="w3-row-padding w3-padding-64 w3-container">
+<div class="w3-row-padding w3-padding-64 w3-container" style="margin-top: 8%;">
 	<div class="w3-container">
 	  <div class="w3-twothird">
 		<h1>Pricing and Ordering</h1>
