--- a/rocket.html
+++ b/rocket.html
@@ -119,7 +119,8 @@
         </div> <!-- Ref CSS for loaction and style-->
 
         <div onclick="showDescription('blurb7')" id="num_cust8">click
-          <div id="blurb7">Actual size 26 x 20 inches</div>
+          <div id="blurb7">Actual size 26 x 20 inches <br>
+            Image size is 17.75 x 23 Inches </div>
         </div> <!-- Ref CSS for loaction and style-->
 
           <area shape="rect" coords="0,0,1580,1460" id=""/> <!-- total picture area hover-->
@@ -128,7 +129,9 @@
       </div>
     </map>
   </div>
+  <p class="w3-center">Hover over picture for additional information</p>
 </div>
+
 <!-- INformation Section -->
 
 <div class=" w3-container">
