--- a/contact_me.html
+++ b/contact_me.html
@@ -5,7 +5,7 @@ Add nav bar to the footer ( improve footer)
 -->
 
 <html>
-<title>Goals - Premium Incentive</title> <!-- title, displayed in tab-->
+<title>Math Tutoring</title> <!-- title, displayed in tab-->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -29,41 +29,30 @@ Add nav bar to the footer ( improve footer)
 	<div class="w3-bar w3-white w3-wide w3-padding w3-card">
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large" 
 		href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a> 
-  <a href=".\index.html" class="w3-bar-item w3-button "><i class="fa fa-home w3-margin-right"></i>Goals</a>
+  <a href=".\index.html" class="w3-bar-item w3-button "><i class="fa fa-home w3-margin-right"></i>Math Tutoring</a>
 	  <!-- Float links to the right. Hide them on small screens -->
 	  <div class="w3-right w3-hide-small">
 		
-		<a href=".\About_the_Artists.html" class="w3-bar-item w3-button ">About Goals</a>
-
-		<div class="w3-dropdown-hover">		
-			<a class="w3-button" style="border-left: 2px solid black;">  Products <i class="fa fa-caret-down"> </i> </a>     
-			<div class="w3-dropdown-content w3-bar-block">
-				<a href=".\rocket.html" class="w3-bar-item w3-button ">The Rocket Richard</a>
-				<a href=".\jean_beliveau.html" class="w3-bar-item w3-button ">Jean Beliveau</a>
-			</div>	
-    </div>	
-    <a href=".\photo_gallery.html" class="w3-bar-item w3-button ">Photo Gallery</a>
-		<a href=".\price.html"  class="w3-bar-item w3-button ">Pricing</a>
-		<a href=".\shipping.html" class="w3-bar-item w3-button  ">Shipping</a>
-		<a href=".\premium.html" class="w3-bar-item w3-button ">Corporate Clients</a>
-		<a href=".\updates.html" class=" w3-button w3-bar-item " >Updates</a>
-
+		
+	<a href=".\services.html" class="w3-bar-item w3-button ">Services & Pricing</a>
+	<a href=".\contact_me.html"	class="w3-bar-item w3-button ">Contact Us</a>
+    
+	<a href=".\updates.html" class ="w3-bar-item w3-button ">Updates</a>
 	  </div>
 	</div>
   </div>
 
 
   <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-  <div id="navDemo" class="small-bar w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-	<a href=".\photo_gallery.html" class="w3-bar-item w3-button ">Photo Gallery</a>
-	<a href=".\About_the_Artists.html" class="w3-bar-item w3-button ">About Goals Inc</a>
-	<a href=".\rocket.html" class="w3-bar-item w3-button ">The Rocket Richard</a>
-	<a href=".\jean_beliveau.html" class="w3-bar-item w3-button  ">Jean Beliveau</a>
-	<a href=".\price.html"  class="w3-bar-item w3-button ">Pricing</a>
-	<a href=".\shipping.html" class="w3-bar-item w3-button ">Shipping</a>
-	<a href=".\premium.html" class="w3-bar-item w3-button">Corporate Clients</a>
-	<a href=".\updates.html" class=" w3-button w3-bar-item" >Updates</a>
+<div id="navDemo" class="small-bar w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
+	
+	<a href=".\services.html" class="w3-bar-item w3-button ">Services & Pricing</a>
+	<a href=".\contact_me.html"	class="w3-bar-item w3-button ">Contact Us</a>
+	
+	<a href=".\updates.html"  class="w3-bar-item w3-button ">updates</a>
 </div>
+
+
 
 
 <!-- Page content -->
@@ -75,13 +64,13 @@ Add nav bar to the footer ( improve footer)
 	<div class="w3-content">
 	  <div class="w3-twothird">
 		<h1 class="w3-border-bottom w3-border-light-grey">Contact Us</h1>
-		<h5 class="w3-padding-32">
-			 commemorative.goals@gmail.com
-		</h5>
+		
+			<div class="w3-xlarge"><a href="#">twotutorstoronto@gmail.com</a></div>
+		
 	  </div>
   <!-- .w3-col.m5 is for spacing-->
 		 <div class=".w3-col.m5 w3-center w3-padding-32" >
-		<img src=".\pics\jean_beliveau.jpg" style="width:250px;height:312px;">
+		<img src=".\pics\qaud_eq.png" style="width:350px;height:112px;">
 	  </div>
 	</div>
   </div>
@@ -89,44 +78,45 @@ Add nav bar to the footer ( improve footer)
 
 
 
-	
-
-
-  
-
-
 <!-- Footer -->
-<footer class="w3-container w3-black w3-padding-16" style="position: absolute; bottom: 0; width: 100%;">
+<footer class="w3-container w3-Purple w3-padding-16" style="position: absolute; bottom: 0px; width:100%; ">
 	
 	<div class = "w3-container">
-		<div class="w3-bar w3-black w3-wide w3-padding-16 w3-card">
+		<div class="w3-bar w3-wide w3-padding-16">
 			
 			  <div class="w3-left w3-hide-small">
-				<a href=".\price.html" class="w3-bar-item-foot w3-button ">Pricing</a>  
-				<a href="#.\faq.html" class="w3-bar-item-foot w3-button ">FAQ</a>
-				<a href="#.\contact_me.html" class="w3-bar-item-foot w3-button ">Contact Us</a>
-	
+				<a href=".\services.html" class="w3-bar-item-foot w3-button ">Pricing</a>  
+				<a href=".\faq.html" class="w3-bar-item-foot w3-button ">FAQ</a>
+				<a href=".\contact_me.html" class="w3-bar-item-foot w3-button ">Contact Us</a>
 		</div>
 	</div>	
 
 
-<p >  <br> &copy; Copyright 2020 Commemorative Goals </p>
+<p >  <br> &copy; Copyright 2021 Two Tutors academics </p>
 
 </footer>
 
 <!-- Script for Sidebar, Tabs, Accordions, Progress bars and slideshows -->
 <script>
-    // Used to toggle the menu on small screens when clicking on the menu button
-    function myFunction() {
-      var x = document.getElementById("navDemo");
-      if (x.className.indexOf("w3-show") == -1) {
-        x.className += " w3-show";
-      } else { 
-        x.className = x.className.replace(" w3-show", "");
-      }
-    }
-    
-    </script>
+// Used to toggle the menu on small screens when clicking on the menu button
+
+function myFunction() {
+var x = document.getElementById("navDemo");
+if (x.className.indexOf(" w3-show") == -1) {
+x.className += " w3-show";
+} else { 
+x.className = x.className.replace(" w3-show", "");
+}
+}
+
+// function for drawing lines for dimentions 
+function draw() {
+var canvas = document.getElementById('canvas');
+if (canvas.getContext) {
+var ctx = canvas.getContext('2d');
+}
+}
+</script>
 
 </body>
 </html>
