--- a/updates.html
+++ b/updates.html
@@ -29,137 +29,69 @@ Add nav bar to the footer ( improve footer)
 	<div class="w3-bar w3-white w3-wide w3-padding w3-card">
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large" 
 		href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a> 
-  <a href=".\index.html" class="w3-bar-item w3-button "><i class="fa fa-home w3-margin-right"></i>Goals</a>
+  <a href=".\index.html" class="w3-bar-item w3-button "><i class="fa fa-home w3-margin-right"></i>Math Tutoring</a>
 	  <!-- Float links to the right. Hide them on small screens -->
 	  <div class="w3-right w3-hide-small">
 		
-		<a href=".\About_the_Artists.html" class="w3-bar-item w3-button ">About Goals</a>
-
-		<div class="w3-dropdown-hover">		
-			<a class="w3-button" style="border-left: 2px solid black;">  Products <i class="fa fa-caret-down"> </i> </a>     
-			<div class="w3-dropdown-content w3-bar-block">
-				<a href=".\rocket.html" class="w3-bar-item w3-button ">The Rocket Richard</a>
-				<a href=".\jean_beliveau.html" class="w3-bar-item w3-button ">Jean Beliveau</a>
-			</div>	
-    </div>	
-    <a href=".\photo_gallery.html" class="w3-bar-item w3-button ">Photo Gallery</a>
-		<a href=".\price.html"  class="w3-bar-item w3-button ">Pricing</a>
-		<a href=".\shipping.html" class="w3-bar-item w3-button  ">Shipping</a>
-		<a href=".\premium.html" class="w3-bar-item w3-button ">Premium Incentive</a>
-		<a href=".\updates.html" class=" w3-button w3-bar-item " >Updates</a>
-
+		
+	<a href=".\services.html" class="w3-bar-item w3-button ">Services & Pricing</a>
+	<a href=".\contact_me.html"	class="w3-bar-item w3-button ">Contact Us</a>
+    
+	<a href=".\updates.html" class ="w3-bar-item w3-button ">Updates</a>
 	  </div>
 	</div>
   </div>
 
 
   <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-  <div id="navDemo" class="small-bar w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-	<a href=".\photo_gallery.html" class="w3-bar-item w3-button ">Photo Gallery</a>
-	<a href=".\About_the_Artists.html" class="w3-bar-item w3-button ">About Goals Inc</a>
-	<a href=".\rocket.html" class="w3-bar-item w3-button ">The Rocket Richard</a>
-	<a href=".\jean_beliveau.html" class="w3-bar-item w3-button  ">Jean Beliveau</a>
-	<a href=".\price.html"  class="w3-bar-item w3-button ">Pricing</a>
-	<a href=".\shipping.html" class="w3-bar-item w3-button ">Shipping</a>
-	<a href=".\premium.html" class="w3-bar-item w3-button">Premium Incentive</a>
-	<a href=".\updates.html" class=" w3-button w3-bar-item" >Updates</a>
+<div id="navDemo" class="small-bar w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
+	
+	<a href=".\services.html" class="w3-bar-item w3-button ">Services & Pricing</a>
+	<a href=".\contact_me.html"	class="w3-bar-item w3-button ">Contact Us</a>
+	
+	<a href=".\updates.html"  class="w3-bar-item w3-button ">updates</a>
 </div>
 
 
 <!-- Page content -->
-<div class="w3-content">
+<div class="w3-content" style="margin-top: 5%;">
 
 	<!-- INformation Section -->
-
-<div class="w3-row-padding w3-padding-32 w3-container" style="margin-top: 10%;">
-	<div class="w3-content">
-	  <div class="w3-twothird">
-		<h1 class="w3-border-bottom w3-border-light-grey">Updates</h1>
-		<h5 class="w3-padding-32">
-			In this inaugral group of PSA/DNA authenticated lithographs, we are offering 80, signed and numbered prints.
-		</h5>
-	  </div>
-  <!-- .w3-col.m5 is for spacing-->
-		 <div class=".w3-col.m5 w3-center w3-padding-32" >
-		<img src=".\pics\jean_beliveau.jpg" style="width:250px;height:312px;">
-	  </div>
-	</div>
-  </div>
-
-</div>
-
-
-	<!-- INformation Section on number on signed prints  -->
-
-	<div class="w3-row-padding w3-padding-32 w3-container w3-light-grey">
-		<div class="w3-content">
-		  <div class="w3-twothird">
-			<h1 class="w3-border-bottom w3-border-white">HAND SIGNED LITHOGRAPHS</h1>
-			<h5 class="w3-padding-32">
-				Each year we will be adding more prints available with PSA/DNA autentication.
-			</h5>
-		  </div>
-	  <!-- .w3-col.m5 is for spacing-->
-			 <div class=".w3-col.m5 w3-center w3-padding-32" >
-			<img src=".\pics\rocket_signing.jpeg" style="width:320px;height:200px;">
-		  </div>
-		</div>
-	  </div>
-	
-	</div>
-
-		<!-- INformation Section -->
-
 <div class="w3-row-padding w3-padding-32 w3-container">
 	<div class="w3-content">
-	  <div class="w3-twothird">
-		<h1 class="w3-border-bottom w3-border-light-grey">Updates</h1>
-		<h5 class="w3-padding-32">
-			Look for an outstanding imaige of the bluenose I that will be ready for sale in the summer of 2021. 
+    <h1>Updates</h1>
+		<h5 class="w3-padding-32 w3-center">
+			Small class sessions are coming soon.
 		</h5>
-	  </div>
-  <!-- .w3-col.m5 is for spacing-->
-		 <div class=".w3-col.m5 w3-center w3-padding-32" >
-		<img src=".\pics\bluenose.jpg" style="width:350px;height:257px;">
-	  </div>
+
+	  
 	</div>
-  </div>
+</div>
 
 </div>
-<hr>
-<div class="w3-row-padding w3-padding-32 w3-container">
-	<div class="w3-content">
-		<h1 class="w3-border-bottom w3-border-light-grey">Framing Tip</h1>
-		<h5 class="w3-padding-32">
-			<ul>
-				<li>When deciding on Framing, please remember that the inside Mat (the mat touching the lithograph) should be ACID FREE</li>
-			
-			</ul>
-		</h5>
-	  </div>
 
-</div>
+
+
 
 
   
 
 
 <!-- Footer -->
-<footer class="w3-container w3-black w3-padding-16">
+<footer class="w3-container w3-Purple w3-padding-16" style="position: absolute; bottom: 0px; width:100%; ">
 	
 	<div class = "w3-container">
-		<div class="w3-bar w3-black w3-wide w3-padding-16 w3-card">
+		<div class="w3-bar w3-wide w3-padding-16">
 			
 			  <div class="w3-left w3-hide-small">
-				<a href="#about" class="w3-bar-item-foot w3-button ">Pricing</a>  
-				<a href="#about" class="w3-bar-item-foot w3-button ">FAQ</a>
-				<a href="#about" class="w3-bar-item-foot w3-button ">Contact Us</a>
-	
+				<a href=".\price.html" class="w3-bar-item-foot w3-button ">Pricing</a>  
+				<a href=".\faq.html" class="w3-bar-item-foot w3-button ">FAQ</a>
+				<a href=".\contact_me.html" class="w3-bar-item-foot w3-button ">Contact Us</a>
 		</div>
 	</div>	
 
 
-<p >  <br> &copy; Copyright 2020 Commemorative Goals </p>
+<p >  <br> &copy; Copyright 2021 Two Tutors academics </p>
 
 </footer>
 
