--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@ Add nav bar to the footer ( improve footer)
 
   <header class="w3-display-container w3-wide bgimg" id="home">
 	
-	<div class="w3-display-middle w3-center" style="margin-top: 8%;">
+	<div class="w3-display-middle w3-center" style="margin-top: 0%;">
 		
-	  <h1 class="w3-text-black" ><span class="w3-white w3-opacity-min"><b>Math Tutoring</b></span></h1>
-	  <h3 class=="w3-text-white"><span class="w3-black w3-opacity-min">Website Created by Ethan & Kenji</span></h3>
+	  <h1 class="w3-text-white" ><span class="w3-orange w3-opacity-min"><b>Math Tutoring</b></span></h1>
+	  <h3 class="w3-text-black"><span class="w3-white w3-opacity-min">Website Created by Ethan Johnson-Skinner & Kenji Hewitt</span></h3>
 	</div>
-</header>
+</header>	
 
 
 <!-- Page content -->
@@ -81,29 +81,28 @@ Add nav bar to the footer ( improve footer)
 		<h1 class="w3-border-bottom w3-border-white w3-text-orange">Math Tutoring in Toronto</h1>
 		<h5 class="w3-padding-32">
 			
+			Ethan and Kenji the owners of "two tutors" are Math graduate students (Msc). We aim provide a very flexible tutoring service tailored to your child's needs. This can involve:
 			<ul>
-				<li>One-on-One Mathematics Tutoring (HighSchool & University) -(Zoom sessions until we are vaccinated)</li>
-				<li>Help guide for a succesful transition to the next level of education</li>
-				<li>Help ensure they obtain a place in college/university</li>
-				<li>High School Courses MHF4U, MCV4U,MCR3U,MDM4U,MCT4C,MAP4C,MEL4E </li>
-				<li>Tutors are recent graduates - Maters of Mathematics (Msc)</li>
-				
-			</ul>
-			Ethan and Kenji the owners of "two tutors"  are mathematical graduate students (Msc). Our primary goal is to support students with thier mathematical studies. Our desgined
-			sessions focus on one-on-one tutoring for the specfic needs for the student. From building upon
-			elemtery math skill to undergraduate university mathematics courses we offer a wide range of skill sets.
+				<li>Ongoing and shorterm tutoring sessions</li>
+				<li>No commitments and no advance payments required</li>
+				<li>30 minute sessions in addition to the typical 1 or 2 hour sessions.</li>
+			</ul>	
+				<!--- <li>High School Courses MHF4U, MCV4U,MCR3U,MDM4U,MCT4C,MAP4C,MEL4E </li> -->
+				<!-- <li>Tutors are recent graduates - Maters of Mathematics (Msc)</li> -->
+			We currently provide math tutoring at the highschool and university level. This includes
+			<ul>
+				<li>Highschool functions, advanced functions, calculus and vectors</li>
+				<li>University level Calculus, Discrete Mathematics, Statistics, Linear Algebra</li>
+				<li>Can also provide tutoring in programming for the languages Python and R</li>
+			</ul>	
 			<br>
-			We believe that every student is capable of excelling in math whether they believe it or not. 
 			We promise to help grow your confidence in order to reach your academic goals.
-			we provide one on one for high school mathematics(Grade 9-12), Calculus (grade 12) and university Calculus I, calculus II, 
-			Differential Equations, Probability and Statistics I, and Discrete Mathematics taught at all Ontario universities.
+			Please do not hesitate to contact us about any inquiries you may have at <b>twotutorstoronto@gmail.com</b> to see if we are a good fit for your tutoring needs.
+			
 		</h5>
 	  </div>
-  <!-- .w3-col.m5 is for spacing-->
-		 <div class=".w3-thrid w3-center w3-padding-32">
-		<img src=".\pics\math_pencil.jpg" style="width:320px;height:200px">
-	  </div>
-</div>
+
+
 </div>
 </div>
 
@@ -128,43 +127,47 @@ Add nav bar to the footer ( improve footer)
 </div>
 
 
-
-<div class="w3-container"
+<div class="w3-container">
 <div class="centered">
 	<h1 class="w3-center w3-padding-32 w3-text-indigo">Two Tutors</h1> 
 	<div class="cards w3-padding-32">
+
 		<!-- Card 1 Ethan -->
 		<div class="card w3-card w3-padding-16" style="text-align:center">
 			<h3 class="w3-center">Ethan Skinner </h3>
 			<img src= ".\pics\Ethan_face.png" style="width: 50%;">
-			<h5 class="w3-padding-32 w3-center" style="width:90%;text-align: center; margin-left: auto; margin-right: auto;">
-				Recent Applied mathematics Graduate with university teaching expereince. 
+			<h3 class="w3-padding-32 " style="width:90%;text-align: center; margin-left: auto; margin-right: auto;">
+				Recent Applied Mathematics Graduate</h3>
+				<h5 style="width:90%;text-align: left; margin-left: auto; margin-right: auto;">
 				<ul>
-					<li>Knowledge in public school curriculum subjects, Maths up to grade 12 level</li>
-					<li>Possess great English communication skills to be comfortable sharing information with parents</li>
-					<li>Taught university level mathematics at Ryerson for classrooms up to 45 students</li>
+					<li>Knowledge in public school curriculum subjects, in particular highschool and university maths</li>
+					<li>University level mathematics Graduate teaching assistant </li>
 					<li>Reliability, professionalism, and the ability to teach competently in your areas of specialization</li>
-				  </ul>				
-				Ethan's Linkedin <a href="https://www.linkedin.com/in/ethan-johnson-skinner-b91164b6/">Linkedin</a>. 
+				</ul>	
+				</h5>			
+				Ethan's <a href="https://www.linkedin.com/in/ethan-johnson-skinner-b91164b6/">Linkedin</a>. 
 			</h5>
 		</div>
 
 
 		<!-- Card 2 Kenji-->
 
-		<div class="card w3-card w3-padding-16" style="text-align: center;" >
-		<h3 class="w3-center"> Kenji Hewitt </h3>
-		<img src= ".\pics\kenji_face.png" style="width: 50%;">
-		<h5 class=" w3-center" style="width:90%;text-align: center; margin-left: auto; margin-right: auto;">
-			Masters Graduate in Applied Mathematics 
-			<ul>
-				<li>Privately tutored students for over four years</li>
-				<li>Taught university level mathematics at Ryerson for classrooms up to 45 students</li>
-				<li>Recently went through university and taught at one, knows the insides and outs of the student experience at university.</li>
-			  </ul>				
-			Kenji's Linkedin <a href="https://www.linkedin.com/in/kenji-h-561392142/">Linkedin</a>. 
-		</h5>
-	</div>
+			<div class="card w3-card w3-padding-16" style="text-align: center;" >
+			<h3 class="w3-center"> Kenji Hewitt </h3>
+			<img src= ".\pics\kenji_face.png" style="width: 50%;">
+			<h3 class="w3-padding-16" style="width:90%;text-align: center; margin-left: auto; margin-right: auto;">
+				Masters Graduate in Applied Mathematics  </h3>
+				<h5 style="width:90%;text-align: left; margin-left: auto; margin-right: auto;">
+				<ul>
+					<li>Taught university level mathematics at Ryerson for classrooms up to 45 students.</li>
+					<li>Privately tutored students for over four years</li>
+					<li>Recently went through university (Bachelors + Masters) and knows the insides and outs of the modern student experience</li>
+				</ul>			
+			</h5>	
+				Kenji's <a href="https://www.linkedin.com/in/kenji-h-561392142/" style="text-align:center">Linkedin</a>. 
+			</h5>
+		</div>
+	</div>	
 </div>
 </div>
 
