--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@ Add nav bar to the footer ( improve footer)
 					<li>Knowledge in public school curriculum subjects, in particular highschool and university maths</li>
 					<li>University level mathematics Graduate teaching assistant </li>
 					<li>Reliability, professionalism, and the ability to teach competently in your areas of specialization</li>
+					<li>Msc in Applied mathematics & BEng in Aerospace Engineering</li>
 				</ul>	
 				</h5>			
 				Ethan's <a href="https://www.linkedin.com/in/ethan-johnson-skinner-b91164b6/">Linkedin</a>. 
