--- a/index.html
+++ b/index.html
@@ -81,17 +81,17 @@ Add nav bar to the footer ( improve footer)
 		<h1 class="w3-border-bottom w3-border-white w3-text-orange">Math Tutoring in Toronto</h1>
 		<h5 class="w3-padding-32">
 			
-			Ethan and Kenji the owners of "two tutors" are Math graduate students (Msc). We aim provide a very flexible tutoring service tailored to your child's needs. This can involve:
+			Ethan and Kenji the owners of "TwoTutors" are Math graduate students (Msc). We provide a very flexible tutoring service tailored to your child's needs. This can involve:
 			<ul>
-				<li>Ongoing and shorterm tutoring sessions</li>
+				<li>Ongoing and short term tutoring sessions</li>
 				<li>No commitments and no advance payments required</li>
 				<li>30 minute sessions in addition to the typical 1 or 2 hour sessions.</li>
 			</ul>	
 				<!--- <li>High School Courses MHF4U, MCV4U,MCR3U,MDM4U,MCT4C,MAP4C,MEL4E </li> -->
 				<!-- <li>Tutors are recent graduates - Maters of Mathematics (Msc)</li> -->
-			We currently provide math tutoring at the highschool and university level. This includes
+			We currently provide math tutoring at the high school and university level. This includes:
 			<ul>
-				<li>Highschool functions, advanced functions, calculus and vectors</li>
+				<li>High school functions, advanced functions, calculus and vectors</li>
 				<li>University level Calculus, Discrete Mathematics, Statistics, Linear Algebra</li>
 				<li>Can also provide tutoring in programming for the languages Python and R</li>
 			</ul>	
@@ -113,7 +113,7 @@ Add nav bar to the footer ( improve footer)
 		<h5 class="w3-padding-32">
 			We are two recent graduates from the Masters in Applied Mathematics program at Ryerson University.
 			We also both went to Ryerson for our undergraduate studies and worked in industry before returning for our Masters.
-			As recent grads, we understand the modern student experience from highschool through university all the way into the workplace. 
+			As recent grads, we understand the modern student experience from high school through university all the way into the workplace. 
 		</h5>
 	  </div>
 	
