--- a/index.html
+++ b/index.html
@@ -140,13 +140,13 @@ Add nav bar to the footer ( improve footer)
 				Recent Applied Mathematics Graduate</h3>
 				<h5 style="width:90%;text-align: left; margin-left: auto; margin-right: auto;">
 				<ul>
-					<li>Knowledge in public school curriculum subjects, in particular highschool and university maths</li>
+					<li>600+ hours of university level mathematics teaching & 100+ hours of 1:1 Tutoring</li>
 					<li>University level mathematics Graduate teaching assistant </li>
 					<li>Reliability, professionalism, and the ability to teach competently in your areas of specialization</li>
-					<li>Msc in Applied mathematics & BEng in Aerospace Engineering</li>
+					<li>M.sc in Applied mathematics & B.Eng in Aerospace Engineering</li>
 				</ul>	
 				</h5>			
-				Ethan's <a href="https://www.linkedin.com/in/ethan-johnson-skinner-b91164b6/">Linkedin</a>. 
+				Ethan's <a href="https://www.linkedin.com/in/ethanjohnsonskinner/">Linkedin</a>. 
 			</h5>
 		</div>
 
