--- a/services.html
+++ b/services.html
@@ -65,9 +65,7 @@
   <!-- .w3-col.m5 is for spacing-->
 		 <div class=".w3-col.m5 w3-center w3-padding-32">
 		<h1>Pricing</h1>
-        1 hour :50 CAD <br>
-        2 Hour :90 CAD <br>
-        2+ Hour: 45 CAD <br>
+        1 hour :40 CAD <br>
 	  </div>
 	</div>
   </div>
@@ -93,7 +91,7 @@
 	  </div>
 	
 	</div>
-    <div class='w3-container'>
+    <div class='w3-content'>
         <h1 class="w3-text-black w3-center w3-padding-64" >twotutorstoronto@gmail.com </h1>  
     </div>
 <!-- Footer -->
