--- a/services.html
+++ b/services.html
@@ -65,7 +65,9 @@
   <!-- .w3-col.m5 is for spacing-->
 		 <div class=".w3-col.m5 w3-center w3-padding-32">
 		<h1>Pricing</h1>
-        1 hour :40 CAD <br>
+        Contact Ethan <br>
+		647-461-4214 <br>
+		ethan.johnsonskinner@ryerson.ca
 	  </div>
 	</div>
   </div>
