--- a/Hockey_website/buying_form.html
+++ b/Hockey_website/buying_form.html
@@ -103,21 +103,21 @@
 </div>
 
 <!-- Footer -->
-<footer class="w3-container w3-black w3-padding-16">
+<footer class="w3-container w3-black w3-padding-16" style="background: #0d0d0d !important; border-top: 1px solid rgba(201, 169, 98, 0.3);">
 	
 	<div class="w3-container">
-		<div class="w3-bar w3-black w3-wide w3-padding-16 w3-card">
+		<div class="w3-bar w3-wide w3-padding-16" style="background: transparent !important;">
 			
 			  <div class="w3-left w3-hide-small">
-				<a href="price.html" class="w3-bar-item-foot w3-button ">Pricing</a>  
-				<a href="shipping.html" class="w3-bar-item-foot w3-button ">Shipping</a>
-				<a href="About_the_Artists.html" class="w3-bar-item-foot w3-button ">Contact Us</a>
+				<a href="price.html" class="w3-bar-item-foot w3-button" style="color: rgba(255,255,255,0.7);">Pricing</a>  
+				<a href="shipping.html" class="w3-bar-item-foot w3-button" style="color: rgba(255,255,255,0.7);">Shipping</a>
+				<a href="About_the_Artists.html" class="w3-bar-item-foot w3-button" style="color: rgba(255,255,255,0.7);">Contact Us</a>
 	
 		</div>
 	</div>	
 
 
-<p>  <br> &copy; Copyright 2026 Commemorative Goals </p>
+<p style="font-family: 'Cormorant Garamond', Georgia, serif; font-size: 14px; font-style: italic; color: rgba(255,255,255,0.6);">  <br> &copy; 2026 Commemorative Goals — All Rights Reserved </p>
 
 </footer>
 
