--- a/Hockey_website/main.html
+++ b/Hockey_website/main.html
@@ -72,8 +72,8 @@
 
 	<div class="w3-display-middle w3-center" style="margin-top: 8%;">
 		
-	  <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>Commemorative</b></span>  <span class="w3-hide-small w3-text-light-grey">Goals</span></h1>
-	  
+	  <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min" style="font-family: 'Playfair Display', Georgia, serif; letter-spacing: 0.05em;"><b>COMMEMORATIVE</b></span>  <span class="w3-hide-small" style="color: #c9a962; text-shadow: 2px 2px 10px rgba(0,0,0,0.5);">Goals</span></h1>
+	  <p class="w3-hide-small" style="color: rgba(255,255,255,0.9); font-family: 'Cormorant Garamond', serif; font-size: 1.2rem; font-style: italic; letter-spacing: 0.1em; margin-top: 15px;">Premium Signed Limited Edition Lithographs</p>
 	</div>
 </header>
 
@@ -85,42 +85,44 @@
 <!-- Page content -->
 <div class="w3-content w3-padding" style="max-width:1564px">
 
-	<!-- INformation Section -->
+	<!-- Introduction Section -->
 
 <div class="w3-row-padding w3-padding-64 w3-container">
 	<div class="w3-content">
 	  <div class="w3-twothird">
-		<h1 class="w3-border-bottom w3-border-light-grey">PREMIUM SIGNED LIMITED EDITION LITHOGRAPHS</h1>
-		<hp class="w3-padding-32">
-			Commemorative Goals is dedicated to bringing you, the collector and investor, 
-			the highest quality limited edition fine art reproductions personally signed by the artist and athlete.
-
-		</hp>
+		<p style="font-family: 'Montserrat', sans-serif; font-size: 11px; font-weight: 600; letter-spacing: 0.2em; text-transform: uppercase; color: #c9a962; margin-bottom: 15px;">Exclusive Collection</p>
+		<h1 class="w3-border-bottom w3-border-light-grey" style="font-family: 'Playfair Display', Georgia, serif; font-weight: 500;">PREMIUM SIGNED LIMITED EDITION LITHOGRAPHS</h1>
+		<p class="w3-padding-32" style="font-size: 1.1rem; line-height: 1.9; color: #4a4a4a;">
+			Commemorative Goals is dedicated to bringing you, the discerning collector and investor, 
+			the highest quality limited edition fine art reproductions — each personally signed by both the artist and the legendary athlete.
+		</p>
+		<div style="display: inline-flex; align-items: center; gap: 8px; background: #0d0d0d; color: #e5d4a1; font-family: 'Montserrat', sans-serif; font-size: 10px; font-weight: 600; letter-spacing: 0.2em; text-transform: uppercase; padding: 10px 20px;"><span style="color: #c9a962;">★</span> PSA/DNA Authenticated</div>
 	  </div>
   <!-- .w3-col.m5 is for spacing-->
 		 <div class=".w3-col.m5 w3-center w3-padding-64" >
-		<img src="pics/jean_beliveau.jpg" style="width:250px;height:312px;" alt="Jean Beliveau Lithograph">
+		<img src="pics/jean_beliveau.jpg" style="width:250px;height:312px; border: 8px solid #fff; box-shadow: 0 20px 60px rgba(0,0,0,0.15);" alt="Jean Beliveau Lithograph">
 	  </div>
 	</div>
   </div>
 
 </div>
 
-	<!-- INformation Section on number of carrar goals -->
+	<!-- Numbering System Section -->
 
-	<div class="w3-row-padding w3-padding-64 w3-container">
+	<div class="w3-row-padding w3-padding-64 w3-container" style="background: linear-gradient(135deg, #0d0d0d 0%, #1a1a1a 100%);">
 		<div class="w3-content">
 		  <div class="w3-twothird">
-			<h1 class="w3-border-bottom w3-border-light-grey">THE GOALS NUMBERING SYSTEM</h1>
-			<hp class="w3-padding-32">
+			<p style="font-family: 'Montserrat', sans-serif; font-size: 11px; font-weight: 600; letter-spacing: 0.2em; text-transform: uppercase; color: #c9a962; margin-bottom: 15px;">Unique Provenance</p>
+			<h1 class="w3-border-bottom" style="font-family: 'Playfair Display', Georgia, serif; font-weight: 500; color: #f8f8f8; border-color: rgba(201, 169, 98, 0.3) !important;">THE GOALS NUMBERING SYSTEM</h1>
+			<p class="w3-padding-32" style="font-size: 1.1rem; line-height: 1.9; color: rgba(255,255,255,0.8);">
 				Maurice Richard scored 544 career goals and 82 playoff goals during his NHL career. Commemorative Goals is offering one signed print for each goal scored. 
-				Therefore, each print is unique and represents one of his 626 NHL goals. All prints, in this series, have been autograph authenticated by PSA.  
-				“The leader in third party signature verification”.  In addition, there are 63 signed artist proofs.
-			</hp>
+				Therefore, <strong style="color: #c9a962;">each print is unique</strong> and represents one of his 626 NHL goals. All prints in this series have been autograph authenticated by PSA — 
+				"The leader in third party signature verification." In addition, there are 63 signed artist proofs.
+			</p>
 		  </div>
 	  <!-- .w3-col.m5 is for spacing-->
 			 <div class=".w3-col.m5 w3-center w3-padding-64" >
-			<img src="pics/rocket_number_oval.png" style="width:320px;height:200px;" alt="Rocket Richard Numbering">
+			<img src="pics/rocket_number_oval.png" style="width:320px;height:200px; filter: brightness(1.1);" alt="Rocket Richard Numbering">
 		  </div>
 		</div>
 	  </div>
@@ -131,19 +133,20 @@
 
 <!-- PSA Section -->
 
-<div class="w3-row-padding w3-padding w3-container">
+<div class="w3-row-padding w3-padding-64 w3-container">
 	<div class="w3-content">
 	  <div class="w3-twothird ">
-		<h1 class="w3-border-bottom w3-border-light-grey">PSA Certified</h1>
-		<p class="w3-padding-32">
-			All lithographs available for purchase have been <span class="w3-tag w3-light-grey">PSA Certified</span> and come with a certification card, <br>
-			matching the PSA decal on the print. This authenticity can be confirmed by using the PSA/DNA 
-			<a href="https://www.psacard.com/cert/">Certification Verification Tool</a>
+		<p style="font-family: 'Montserrat', sans-serif; font-size: 11px; font-weight: 600; letter-spacing: 0.2em; text-transform: uppercase; color: #c9a962; margin-bottom: 15px;">Authentication Guarantee</p>
+		<h1 class="w3-border-bottom w3-border-light-grey" style="font-family: 'Playfair Display', Georgia, serif; font-weight: 500;">PSA/DNA CERTIFIED</h1>
+		<p class="w3-padding-32" style="font-size: 1.1rem; line-height: 1.9; color: #4a4a4a;">
+			All lithographs available for purchase have been <span class="w3-tag w3-light-grey">PSA Certified</span> and come with an official certification card 
+			matching the PSA decal affixed to each print. This authenticity can be independently verified using the PSA/DNA 
+			<a href="https://www.psacard.com/cert/" style="color: #a38b4a; border-bottom: 1px solid rgba(201, 169, 98, 0.4);">Certification Verification Tool</a>.
 		</p>
 	  </div>
   <!-- .w3-col.m5 is for spacing-->
 		 <div class=".w3-col.m5 w3-center w3-padding-64" >
-		<img src="pics/psa_card_removed.jpg" style="width:250px;height:250px;" alt="PSA Certification Card">
+		<img src="pics/psa_card_removed.jpg" style="width:250px;height:250px; border: 8px solid #fff; box-shadow: 0 20px 60px rgba(0,0,0,0.15);" alt="PSA Certification Card">
 	  </div>
 	</div>
   </div>
@@ -152,12 +155,16 @@
   
 
 
-<!-- Cards -->
-<hr></hr>
-<div class="w3-white w3-row-padding ">    
-	  <h2 class="w3-wide w3-center">Products</h2>
-	  <p class="w3-center"> Commemorative Goals is currently offering two premium signed lithographs, Maurice Richard and Jean Beliveau 
-		  sizing for each print ( 26”x 20”)
+<!-- Products Cards -->
+<div style="width: 80px; height: 2px; background: linear-gradient(135deg, #c9a962 0%, #e5d4a1 50%, #c9a962 100%); margin: 0 auto 30px;"></div>
+
+<div class="w3-row-padding" style="background: #f5f0e6; padding: 60px 0;">    
+	  <p style="font-family: 'Montserrat', sans-serif; font-size: 11px; font-weight: 600; letter-spacing: 0.2em; text-transform: uppercase; color: #c9a962; text-align: center; margin-bottom: 10px;">Our Collection</p>
+	  <h2 class="w3-wide w3-center" style="font-family: 'Playfair Display', Georgia, serif; font-weight: 500; font-size: 2.5rem; margin-bottom: 15px;">Premium Lithographs</h2>
+	  <p class="w3-center" style="font-family: 'Cormorant Garamond', Georgia, serif; font-size: 1.2rem; font-style: italic; color: #4a4a4a; max-width: 600px; margin: 0 auto;">
+		  Commemorative Goals offers two premium signed lithographs featuring hockey legends<br>
+		  <span style="font-family: 'Montserrat', sans-serif; font-size: 12px; font-weight: 500; letter-spacing: 0.1em; font-style: normal; color: #a38b4a;">Each Print: 26" × 20" | $899 USD</span>
+	</p>
 	</p>
 
 
@@ -236,21 +243,21 @@
 
 
 <!-- Footer -->
-<footer class="w3-container w3-black w3-padding-16">
+<footer class="w3-container w3-black w3-padding-16" style="background: #0d0d0d !important; border-top: 1px solid rgba(201, 169, 98, 0.3);">
 	
 		<div class = "w3-container">
-			<div class="w3-bar w3-black w3-wide w3-padding-16 w3-card">
+			<div class="w3-bar w3-black w3-wide w3-padding-16" style="background: transparent !important;">
 				
 				  <div class="w3-left w3-hide-small">
-					<a href="price.html" class="w3-bar-item-foot w3-button ">Pricing</a>  
-					<a href="shipping.html" class="w3-bar-item-foot w3-button ">Shipping</a>
-					<a href="About_the_Artists.html" class="w3-bar-item-foot w3-button ">Contact Us</a>
+					<a href="price.html" class="w3-bar-item-foot w3-button" style="color: rgba(255,255,255,0.7);">Pricing</a>  
+					<a href="shipping.html" class="w3-bar-item-foot w3-button" style="color: rgba(255,255,255,0.7);">Shipping</a>
+					<a href="About_the_Artists.html" class="w3-bar-item-foot w3-button" style="color: rgba(255,255,255,0.7);">Contact Us</a>
 		
 			</div>
 		</div>	
 
 
-	<p >  <br> &copy; Copyright 2026 Commemorative Goals </p>
+	<p style="font-family: 'Cormorant Garamond', Georgia, serif; font-size: 14px; font-style: italic; color: rgba(255,255,255,0.6);">  <br> &copy; 2026 Commemorative Goals — All Rights Reserved </p>
 	
   </footer>
 
