--- a/Hockey_website/price.html
+++ b/Hockey_website/price.html
@@ -60,35 +60,35 @@
 <!-- Page content -->
 <div class="w3-content w3-padding" style="max-width:1564px">
 
-<!-- INformation Section -->
+<!-- Header Section -->
 <div class="w3-row-padding w3-padding-64 w3-container">
 	<div class="w3-container">
 	  <div class="w3-twothird">
-		<h1>Pricing and Ordering</h1>
-		<h5 class="w3-padding-32">
-			In this inaugural issue of PSA/DNA prints, there are a total of 78 prints available. <br>
-			All purchases are done through ebay.
-		</h5>
+		<p style="font-family: 'Montserrat', sans-serif; font-size: 11px; font-weight: 600; letter-spacing: 0.2em; text-transform: uppercase; color: #c9a962; margin-bottom: 15px;">Investment Opportunity</p>
+		<h1 style="font-family: 'Playfair Display', Georgia, serif; font-weight: 500;">Pricing &amp; Ordering</h1>
+		<p class="w3-padding-32" style="font-size: 1.1rem; line-height: 1.9; color: #4a4a4a;">
+			In this inaugural issue of PSA/DNA authenticated prints, there are a total of 78 prints available. 
+			Each lithograph represents a unique piece of hockey history.<br><br>
+			<span style="font-family: 'Montserrat', sans-serif; font-size: 12px; font-weight: 600; letter-spacing: 0.1em; color: #0d0d0d;">All purchases are processed securely through eBay.</span>
+		</p>
 	  </div>
-  <!-- .w3-col.m5 is for spacing-->
 		 <div class=".w3-col.m5 w3-center w3-padding-64">
-		<img src="pics/psa_card_removed.jpg" style="width:250px;height:280px;" alt="PSA Certificate">
+		<img src="pics/psa_card_removed.jpg" style="width:250px;height:280px; border: 8px solid #fff; box-shadow: 0 20px 60px rgba(0,0,0,0.15);" alt="PSA Certificate">
 	  </div>
 	</div>
   </div>
 
   
-<!-- Card 1 -->
-
-<!-- <div class="row">
-	<div class="column"> 
-<div class="w3-row-padding w3-center w3-margin-top"> -->
+<!-- Product Cards -->
+<div style="width: 80px; height: 2px; background: linear-gradient(135deg, #c9a962 0%, #e5d4a1 50%, #c9a962 100%); margin: 0 auto 40px;"></div>
+<p style="font-family: 'Montserrat', sans-serif; font-size: 11px; font-weight: 600; letter-spacing: 0.2em; text-transform: uppercase; color: #c9a962; text-align: center; margin-bottom: 30px;">Available Prints</p>
 
 	<div class="container w3-padding-16">
 
 		
-	<div class="w3-card" style="max-width:30%;">
-		<h3 class="w3-center"> The Rocket Richard </h3>   
+	<div class="w3-card" style="max-width:30%; background: #fff;">
+		<p style="font-family: 'Montserrat', sans-serif; font-size: 10px; font-weight: 600; letter-spacing: 0.15em; text-transform: uppercase; color: #c9a962; text-align: center; padding-top: 20px; margin-bottom: 5px;">Limited Edition</p>
+		<h3 class="w3-center" style="font-family: 'Playfair Display', Georgia, serif; font-weight: 500; margin-top: 5px;"> The Rocket Richard </h3>   
 		<div class="container-fade">
 			<img src="pics/rocket.jpg" alt="Rocket Richard" class="image-fade" style="width:100%">
 			<div class="middle-fade">
@@ -96,8 +96,8 @@
 			</div>
 		  </div>	
 		
-			   <h1 class="w3-center"> $899 USD</h1> 
-			   <p class="w3-center"> 50 Prints available with PSA/DNA</p>
+			   <h1 class="w3-center" style="font-family: 'Playfair Display', Georgia, serif; font-weight: 400; color: #a38b4a;"> $899 <span style="font-size: 0.5em; color: #666;">USD</span></h1> 
+			   <p class="w3-center" style="font-family: 'Montserrat', sans-serif; font-size: 11px; color: #666; padding-bottom: 20px;"> 50 Prints available with PSA/DNA</p>
 			  
 		
 	</div>
@@ -109,8 +109,9 @@
 	<div class="w3-row-padding w3-center w3-margin-top"> -->
 	
 		
-	<div class="w3-card" style="max-width: 30%;">
-		  <h3 class="w3-center"> Jean Beliveau </h3>
+	<div class="w3-card" style="max-width: 30%; background: #fff;">
+		  <p style="font-family: 'Montserrat', sans-serif; font-size: 10px; font-weight: 600; letter-spacing: 0.15em; text-transform: uppercase; color: #c9a962; text-align: center; padding-top: 20px; margin-bottom: 5px;">Limited Edition</p>
+		  <h3 class="w3-center" style="font-family: 'Playfair Display', Georgia, serif; font-weight: 500; margin-top: 5px;"> Jean Beliveau </h3>
 		  <div class="container-fade">
 			<img src="pics/jean_beliveau.jpg" alt="Jean Beliveau" class="image-fade" style="width:100%">
 			<div class="middle-fade">
@@ -118,8 +119,8 @@
 			</div>
 		  </div>
 		
-			   <h1 class="w3-center"> $899 USD</h1> 
-			   <p class="w3-center"> 50 Prints available with PSA/DNA</p>
+			   <h1 class="w3-center" style="font-family: 'Playfair Display', Georgia, serif; font-weight: 400; color: #a38b4a;"> $899 <span style="font-size: 0.5em; color: #666;">USD</span></h1> 
+			   <p class="w3-center" style="font-family: 'Montserrat', sans-serif; font-size: 11px; color: #666; padding-bottom: 20px;"> 50 Prints available with PSA/DNA</p>
 		
 		
 	</div>
@@ -129,8 +130,9 @@
 	<div class="w3-row-padding w3-center w3-margin-top"> -->
 	
 		
-		<div class="w3-card" style="max-width: 30%;">
-			<h3 class="w3-center"> Jean Beliveau - Playoff </h3>
+		<div class="w3-card" style="max-width: 30%; background: #fff;">
+			<p style="font-family: 'Montserrat', sans-serif; font-size: 10px; font-weight: 600; letter-spacing: 0.15em; text-transform: uppercase; color: #c9a962; text-align: center; padding-top: 20px; margin-bottom: 5px;">Limited Edition</p>
+			<h3 class="w3-center" style="font-family: 'Playfair Display', Georgia, serif; font-weight: 500; margin-top: 5px;"> Jean Beliveau — Playoff </h3>
 			
 			<div class="container-fade">
 				<img src="pics/jean_beliveau.jpg" alt="Jean Beliveau Playoff" class="image-fade" style="width:100%">
@@ -139,28 +141,29 @@
 				</div>
 			  </div>
 			
-				   <h1 class="w3-center"> $899 USD</h1> 
-				   <p class="w3-center"> 50 Prints available with PSA/DNA</p>
+				   <h1 class="w3-center" style="font-family: 'Playfair Display', Georgia, serif; font-weight: 400; color: #a38b4a;"> $899 <span style="font-size: 0.5em; color: #666;">USD</span></h1> 
+				   <p class="w3-center" style="font-family: 'Montserrat', sans-serif; font-size: 11px; color: #666; padding-bottom: 20px;"> 50 Prints available with PSA/DNA</p>
 	  </div>
 	
 	</div>
 	
 <br>
 
-<!-- Information Section for ordering -->
+<!-- How to Order Section -->
 
-<div class="w3-row-padding w3-padding-64 w3-container">
+<div class="w3-row-padding w3-padding-64 w3-container" style="background: linear-gradient(135deg, #0d0d0d 0%, #1a1a1a 100%); margin-top: 60px;">
 	<div class="w3-content">
 	  <div class="w3-twothird">
-		<h1 class="w3-border-bottom w3-border-light-grey">How to Order</h1>
+		<p style="font-family: 'Montserrat', sans-serif; font-size: 11px; font-weight: 600; letter-spacing: 0.2em; text-transform: uppercase; color: #c9a962; margin-bottom: 15px;">Purchase Process</p>
+		<h1 style="font-family: 'Playfair Display', Georgia, serif; font-weight: 500; color: #f8f8f8; border-bottom: 1px solid rgba(201, 169, 98, 0.3); padding-bottom: 20px;">How to Order</h1>
 		<div class="w3-padding-32">
-			<ol>
-				<li>Choose the Lithograph you would like to order.</li>
-				<li>Choose the Number of the lithograph you would like (from under the picture).</li>
-				<li>Contact us to complete your purchase.</li>
-				<li>Please read the shipping procedures under the shipping tab.</li>
-				<li>Note: if you are ordering two prints (1 Richard and 1 Beliveau), please read the information under the Shipping tab.</li>
-				<li>Place your order.</li>
+			<ol style="color: rgba(255,255,255,0.85); line-height: 2; font-size: 1.05rem; padding-left: 20px;">
+				<li style="margin-bottom: 10px;">Choose the Lithograph you would like to order.</li>
+				<li style="margin-bottom: 10px;">Select the unique goal number from the available prints.</li>
+				<li style="margin-bottom: 10px;"><a href="About_the_Artists.html" style="color: #c9a962; border-bottom: 1px solid rgba(201, 169, 98, 0.4);">Contact us</a> to complete your purchase.</li>
+				<li style="margin-bottom: 10px;">Review the <a href="shipping.html" style="color: #c9a962; border-bottom: 1px solid rgba(201, 169, 98, 0.4);">shipping procedures</a> under the shipping tab.</li>
+				<li style="margin-bottom: 10px;"><strong style="color: #c9a962;">Special:</strong> Ordering two prints (1 Richard + 1 Beliveau)? See the <a href="premium.html" style="color: #c9a962; border-bottom: 1px solid rgba(201, 169, 98, 0.4);">Premium Incentive</a> offer.</li>
+				<li>Place your order and await confirmation.</li>
 			  </ol>
 		</div>
 	  </div>
@@ -171,21 +174,21 @@
 </div>
 
 <!-- Footer -->
-<footer class="w3-container w3-black w3-padding-16">
+<footer class="w3-container w3-black w3-padding-16" style="background: #0d0d0d !important; border-top: 1px solid rgba(201, 169, 98, 0.3);">
 	
 	<div class="w3-container">
-		<div class="w3-bar w3-black w3-wide w3-padding-16 w3-card">
+		<div class="w3-bar w3-wide w3-padding-16" style="background: transparent !important;">
 			
 			  <div class="w3-left w3-hide-small">
-				<a href="price.html" class="w3-bar-item-foot w3-button ">Pricing</a>  
-				<a href="shipping.html" class="w3-bar-item-foot w3-button ">Shipping</a>
-				<a href="About_the_Artists.html" class="w3-bar-item-foot w3-button ">Contact Us</a>
+				<a href="price.html" class="w3-bar-item-foot w3-button" style="color: rgba(255,255,255,0.7);">Pricing</a>  
+				<a href="shipping.html" class="w3-bar-item-foot w3-button" style="color: rgba(255,255,255,0.7);">Shipping</a>
+				<a href="About_the_Artists.html" class="w3-bar-item-foot w3-button" style="color: rgba(255,255,255,0.7);">Contact Us</a>
 	
 		</div>
 	</div>	
 
 
-<p>  <br> &copy; Copyright 2026 Commemorative Goals </p>
+<p style="font-family: 'Cormorant Garamond', Georgia, serif; font-size: 14px; font-style: italic; color: rgba(255,255,255,0.6);">  <br> &copy; 2026 Commemorative Goals — All Rights Reserved </p>
 
 </footer>
 
