--- a/Hockey_website/About_the_Artists.html
+++ b/Hockey_website/About_the_Artists.html
@@ -112,11 +112,11 @@
       </div>
   
       <div class="w3-col m6 w3-padding-large">
-        <h1 class="w3-center"><u>About the Artist</u></h1><br>
-        <h5 class="w3-center">Richard John Carter  </h5>
-        <p class="w3-large">After establishing himself as a top commercial illustrator, 
+        <p style="font-family: 'Montserrat', sans-serif; font-size: 11px; font-weight: 600; letter-spacing: 0.2em; text-transform: uppercase; color: #c9a962; margin-bottom: 15px;">The Artist</p>
+        <h1 class="w3-center" style="font-family: 'Playfair Display', Georgia, serif; font-weight: 500; text-decoration: none;">Richard John Carter</h1><br>
+<p style="font-size: 1.1rem; line-height: 1.9; color: #4a4a4a;">After establishing himself as a top commercial illustrator, 
           Richard is now able to devote more of his time and considerable talent to fine art. 
-          The commission to paint “Rocket Richard” was the perfect opportunity to combine his two great loves, hockey and art.
+          The commission to paint "Rocket Richard" was the perfect opportunity to combine his two great loves — <strong style="color: #a38b4a;">hockey and art</strong>.
           </p>
         
       </div>
@@ -145,21 +145,21 @@
 
 
 <!-- Footer -->
-<footer class="w3-container w3-black w3-padding-16">
+<footer class="w3-container w3-black w3-padding-16" style="background: #0d0d0d !important; border-top: 1px solid rgba(201, 169, 98, 0.3);">
 	
   <div class = "w3-container">
-    <div class="w3-bar w3-black w3-wide w3-padding-16 w3-card">
+    <div class="w3-bar w3-wide w3-padding-16" style="background: transparent !important;">
       
         <div class="w3-left w3-hide-small">
-        <a href="price.html" class="w3-bar-item-foot w3-button ">Pricing</a>  
-        <a href="shipping.html" class="w3-bar-item-foot w3-button ">Shipping</a>
-        <a href="About_the_Artists.html" class="w3-bar-item-foot w3-button ">Contact Us</a>
+        <a href="price.html" class="w3-bar-item-foot w3-button" style="color: rgba(255,255,255,0.7);">Pricing</a>  
+        <a href="shipping.html" class="w3-bar-item-foot w3-button" style="color: rgba(255,255,255,0.7);">Shipping</a>
+        <a href="About_the_Artists.html" class="w3-bar-item-foot w3-button" style="color: rgba(255,255,255,0.7);">Contact Us</a>
   
     </div>
   </div>	
 
 
-<p>  <br> &copy; Copyright 2026 Commemorative Goals </p>
+<p style="font-family: 'Cormorant Garamond', Georgia, serif; font-size: 14px; font-style: italic; color: rgba(255,255,255,0.6);">  <br> &copy; 2026 Commemorative Goals — All Rights Reserved </p>
 
 </footer>
 
