--- a/Hockey_website/jean_beliveau.html
+++ b/Hockey_website/jean_beliveau.html
@@ -59,7 +59,8 @@
 </div>
 
 <div class='w3-container'>
-  <h1 class="w3-text-indigo w3-center w3-padding-64" style="margin-top: 10%;"><b>Jean</b> <span class="w3-xxlarge w3-text-black">"Le Gros Bill"</span> <b>Beliveau</b> </h1>  
+  <p style="font-family: 'Montserrat', sans-serif; font-size: 11px; font-weight: 600; letter-spacing: 0.2em; text-transform: uppercase; color: #c9a962; text-align: center; padding-top: 80px; margin-bottom: 10px;">Limited Edition Lithograph</p>
+  <h1 class="w3-center" style="font-family: 'Playfair Display', Georgia, serif; font-weight: 500; margin-top: 0; padding-bottom: 40px;"><b>Jean</b> <span class="w3-xxlarge" style="color: #a38b4a;">"Le Gros Bill"</span> <b>Beliveau</b> </h1>  
 <div class="w3-content " style="height:1400px; max-width:1015px;position:relative;">
   <img class="w3-content border" src="pics/jean_beliveau.jpg" usemap="#Map" style="position:absolute; width: 1000px;" alt="Jean Beliveau Lithograph"/>
   <div class=""> 
@@ -179,20 +180,20 @@
 
   
 <!-- Footer -->
-<footer class="w3-container w3-black w3-padding-16">
+<footer class="w3-container w3-black w3-padding-16" style="background: #0d0d0d !important; border-top: 1px solid rgba(201, 169, 98, 0.3);">
 	
   <div class="w3-container">
-    <div class="w3-bar w3-black w3-wide w3-padding-16 w3-card">
+    <div class="w3-bar w3-wide w3-padding-16" style="background: transparent !important;">
       
         <div class="w3-left w3-hide-small">
-        <a href="price.html" class="w3-bar-item-foot w3-button ">Pricing</a>  
-        <a href="shipping.html" class="w3-bar-item-foot w3-button ">Shipping</a>
-        <a href="About_the_Artists.html" class="w3-bar-item-foot w3-button ">Contact Us</a>
+        <a href="price.html" class="w3-bar-item-foot w3-button" style="color: rgba(255,255,255,0.7);">Pricing</a>  
+        <a href="shipping.html" class="w3-bar-item-foot w3-button" style="color: rgba(255,255,255,0.7);">Shipping</a>
+        <a href="About_the_Artists.html" class="w3-bar-item-foot w3-button" style="color: rgba(255,255,255,0.7);">Contact Us</a>
   
     </div>
   </div>
 
-<p>  <br> &copy; Copyright 2026 Commemorative Goals </p>
+<p style="font-family: 'Cormorant Garamond', Georgia, serif; font-size: 14px; font-style: italic; color: rgba(255,255,255,0.6);">  <br> &copy; 2026 Commemorative Goals — All Rights Reserved </p>
 
 </footer>
 
