--- a/Hockey_website/shipping.html
+++ b/Hockey_website/shipping.html
@@ -60,23 +60,27 @@
 <!-- Page content -->
 <div class="w3-content w3-padding" style="max-width:1564px">
 
-<!-- INformation Section -->
+<!-- Shipping Section -->
 <div class="w3-row-padding w3-padding-64 w3-container">
 	<div class="w3-container">
 	  <div class="w3-twothird">
-		<h1>Shipping Information</h1>
-		<h5 class="w3-padding-32">
-			We will only ship in reinforced corrugated tubes. We will NOT ship flat.
-Shipping flat only increases the chance of damage to the print. On the outside of the tube are handling and framing instructions. This also decreases the cost of shipping.
-Shipping costs: $25.00 USD, anywhere in North America.
-Outside of North America: Please contact us to receive an accurate shipping quote.
-If you are ordering two lithographs (one Richard and one Beliveau) they will be shipped separately to minimize any chance of damage. You will only be charged one shipping charge.
-
-		</h5>
+		<p style="font-family: 'Montserrat', sans-serif; font-size: 11px; font-weight: 600; letter-spacing: 0.2em; text-transform: uppercase; color: #c9a962; margin-bottom: 15px;">Safe &amp; Secure Delivery</p>
+		<h1 style="font-family: 'Playfair Display', Georgia, serif; font-weight: 500;">Shipping Information</h1>
+		<div class="w3-padding-32" style="font-size: 1.05rem; line-height: 1.9; color: #4a4a4a;">
+			<p>We ship <strong>exclusively in reinforced corrugated tubes</strong> — we will NOT ship flat. Flat shipping only increases the chance of damage to these valuable prints.</p>
+			<p>Each tube includes <strong>handling and framing instructions</strong> on the exterior, and this method also reduces shipping costs.</p>
+			
+			<div style="background: rgba(201, 169, 98, 0.1); border-left: 3px solid #c9a962; padding: 20px 25px; margin: 25px 0;">
+				<p style="font-family: 'Montserrat', sans-serif; font-size: 11px; font-weight: 600; letter-spacing: 0.15em; text-transform: uppercase; color: #c9a962; margin-bottom: 8px;">Shipping Rates</p>
+				<p style="font-size: 1.1rem; margin: 0;"><strong style="font-family: 'Playfair Display', serif; font-size: 1.4rem; color: #a38b4a;">$25 USD</strong> — anywhere in North America</p>
+				<p style="color: #666; font-size: 0.95rem; margin-top: 10px;">Outside of North America: <a href="About_the_Artists.html" style="color: #a38b4a; border-bottom: 1px solid rgba(201, 169, 98, 0.4);">Contact us</a> for an accurate shipping quote.</p>
+			</div>
+			
+			<p><strong style="color: #c9a962;">Note:</strong> If you order two lithographs (one Richard and one Beliveau), they will be shipped separately to minimize any chance of damage. <em>You will only be charged one shipping fee.</em></p>
+		</div>
 	  </div>
-  <!-- .w3-col.m5 is for spacing-->
 		 <div class=".w3-col.m5 w3-center w3-padding-64">
-		<img src="pics/poster_tube.jpg" style="width:150px;height:280px;" alt="Shipping Tube">
+		<img src="pics/poster_tube.jpg" style="width:150px;height:280px; box-shadow: 0 20px 60px rgba(0,0,0,0.15);" alt="Shipping Tube">
 	  </div>
 	</div>
   </div>
@@ -86,23 +90,23 @@ If you are ordering two lithographs (one Richard and one Beliveau) they will be 
 	
 <br>
 
-<!-- INformation Section for ordering -->
+<!-- How to Order Section -->
 
-<div class="w3-row-padding w3-padding-64 w3-container">
+<div class="w3-row-padding w3-padding-64 w3-container" style="background: linear-gradient(135deg, #0d0d0d 0%, #1a1a1a 100%);">
 	<div class="w3-content">
 	  <div class="w3-twothird">
-		<h1 class="w3-border-bottom w3-border-light-grey">How to order</h1>
-		<hp class="w3-padding-32">
-			<ol>
-				<li>Choose the Lithograph you would like to order. </li>
-				<li>Choose the Number of the lithograph you would like. ( from under the picture)</li>
-				<li>Click on the Ebay icon (This will take you to my ebay site. This allows you to have the Ebay purchase guarantee??)ll</li>
-				<li>Just fill in your lithograph and number chosen, adding the price.</li>
-				<li>Please read the shipping procedures under the shipping tab.
-					Note: if you are ordering two prints, 1 Richard and 1 Beliveau, please read the information under the Shipping tab.</li>
-				<li>Place your order</li>
+		<p style="font-family: 'Montserrat', sans-serif; font-size: 11px; font-weight: 600; letter-spacing: 0.2em; text-transform: uppercase; color: #c9a962; margin-bottom: 15px;">Purchase Process</p>
+		<h1 style="font-family: 'Playfair Display', Georgia, serif; font-weight: 500; color: #f8f8f8; border-bottom: 1px solid rgba(201, 169, 98, 0.3); padding-bottom: 20px;">How to Order</h1>
+		<div class="w3-padding-32">
+			<ol style="color: rgba(255,255,255,0.85); line-height: 2.2; font-size: 1.05rem; padding-left: 20px;">
+				<li style="margin-bottom: 12px;">Choose the Lithograph you would like to order.</li>
+				<li style="margin-bottom: 12px;">Select the unique goal number from under the picture.</li>
+				<li style="margin-bottom: 12px;"><a href="About_the_Artists.html" style="color: #c9a962; border-bottom: 1px solid rgba(201, 169, 98, 0.4);">Contact us</a> to complete your purchase securely.</li>
+				<li style="margin-bottom: 12px;">Review the shipping procedures above.</li>
+				<li style="margin-bottom: 12px;"><strong style="color: #c9a962;">Two prints?</strong> See our <a href="premium.html" style="color: #c9a962; border-bottom: 1px solid rgba(201, 169, 98, 0.4);">Premium Incentive</a> for special offers.</li>
+				<li>Place your order and await confirmation.</li>
 			  </ol>
-		</hp>
+		</div>
 	  </div>
  
 	</div>
@@ -111,21 +115,21 @@ If you are ordering two lithographs (one Richard and one Beliveau) they will be 
 </div>
 
 <!-- Footer -->
-<footer class="w3-container w3-black w3-padding-16">
+<footer class="w3-container w3-black w3-padding-16" style="background: #0d0d0d !important; border-top: 1px solid rgba(201, 169, 98, 0.3);">
 	
 	<div class="w3-container">
-		<div class="w3-bar w3-black w3-wide w3-padding-16 w3-card">
+		<div class="w3-bar w3-wide w3-padding-16" style="background: transparent !important;">
 			
 			  <div class="w3-left w3-hide-small">
-				<a href="price.html" class="w3-bar-item-foot w3-button ">Pricing</a>  
-				<a href="shipping.html" class="w3-bar-item-foot w3-button ">Shipping</a>
-				<a href="About_the_Artists.html" class="w3-bar-item-foot w3-button ">Contact Us</a>
+				<a href="price.html" class="w3-bar-item-foot w3-button" style="color: rgba(255,255,255,0.7);">Pricing</a>  
+				<a href="shipping.html" class="w3-bar-item-foot w3-button" style="color: rgba(255,255,255,0.7);">Shipping</a>
+				<a href="About_the_Artists.html" class="w3-bar-item-foot w3-button" style="color: rgba(255,255,255,0.7);">Contact Us</a>
 	
 		</div>
 	</div>	
 
 
-<p>  <br> &copy; Copyright 2026 Commemorative Goals </p>
+<p style="font-family: 'Cormorant Garamond', Georgia, serif; font-size: 14px; font-style: italic; color: rgba(255,255,255,0.6);">  <br> &copy; 2026 Commemorative Goals — All Rights Reserved </p>
 
 </footer>
 
