--- a/Hockey_website/main.html
+++ b/Hockey_website/main.html
@@ -175,7 +175,7 @@
 
 	<div class="w3-card container" style="max-width:40%;" >
 		<h3 class="w3-center"> The Rocket Richard </h3>   
-	<a  href="rocket.html" style="width: 85%;">  <img class="center" src="pics/rocket.jpg" style="width:100%" alt="Rocket Richard Lithograph"> </a>
+	<a href="rocket.html" class="center" style="display: block; width: 85%;">  <img src="pics/rocket.jpg" style="width:100%" alt="Rocket Richard Lithograph"> </a>
 
 	<!-- Vertical arrow-->
 		<svg height="550" width="15">
@@ -232,7 +232,7 @@
 	  <div class="w3-card container" style="max-width: 40%;">
 	  <h3 class="w3-center"> Jean Beliveau </h3>
 	
-		 <a href="jean_beliveau.html" style="width: 85%;"> <img class="center img-hover" src="pics/jean_beliveau.jpg" style="width:100%" alt="Jean Beliveau Lithograph"> </a>
+		 <a href="jean_beliveau.html" class="center" style="display: block; width: 85%;"> <img src="pics/jean_beliveau.jpg" style="width:100%" alt="Jean Beliveau Lithograph"> </a>
 	  </div>
 	  
 	</div>
