--- a/Hockey_website/main.html
+++ b/Hockey_website/main.html
@@ -54,7 +54,7 @@
 
 
   <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-<div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top: 58px;">
+<div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium" style="position: fixed; top: 58px; left: 0; right: 0; z-index: 999;">
 	<a href="photo_gallery.html" class="w3-bar-item w3-button ">Photo Gallery</a>
 	<a href="About_the_Artists.html" class="w3-bar-item w3-button ">About Goals Inc</a>
 	<a href="rocket.html" class="w3-bar-item w3-button w3-padding-large ">The Rocket Richard</a>
@@ -67,7 +67,7 @@
 
 <!-- Header -->
   <!-- New Header -->
-  <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
+  <header class="w3-display-container w3-content w3-wide" style="max-width:1500px; margin-top: 58px;" id="home">
 	<img class="w3-image" src="pics/rocket_crop.jpg" alt="Rocket Cropped" width="1500px" height="400px">
 
 	<div class="w3-display-middle w3-center" style="margin-top: 8%;">
