--- a/Hockey_website/photo_gallery.html
+++ b/Hockey_website/photo_gallery.html
@@ -47,7 +47,7 @@
 
 
   <!-- Navbar on small screens -->
-<div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top: 58px;">
+<div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium" style="position: fixed; top: 58px; left: 0; right: 0; z-index: 999;">
 	<a href="photo_gallery.html" class="w3-bar-item w3-button ">Photo Gallery</a>
 	<a href="About_the_Artists.html" class="w3-bar-item w3-button ">About Goals Inc</a>
 	<a href="rocket.html" class="w3-bar-item w3-button w3-padding-large ">The Rocket Richard</a>
